Alignment fixed

--- a/source/stylesheets/theme.scss
+++ b/source/stylesheets/theme.scss
@@ -297,6 +297,14 @@ ul, li {
   margin-left: 0px !important;
 }
 
+#about-item {
+  padding-left: 1em !important;
+}
+
+#team-item {
+  padding-left: 10px !important;
+}
+
 @media all and (min-width: 40em) {
   .list-item {
     width: 100%;
@@ -316,6 +324,7 @@ ul, li {
 
 .imgProject {
   margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 .text {
@@ -375,6 +384,13 @@ ul, li {
 .img-faIcon{
   margin-right: 10px;
 }
+
+
+.d-block {
+  color: #fff;
+  padding-left: 0.5em !important;
+}
+
 
 
 // Gallery
